--- a/app/src/components/showcase/card/ShowcaseCard.astro
+++ b/app/src/components/showcase/card/ShowcaseCard.astro
@@ -16,7 +16,7 @@ const {
 ---
 
 <a
-  href={`/showcase/${entry.slug}/`}
+  href={`/showcase/${entry.id}/`}
   class={clsx("showcase-card", customClass)}
   {...rest}>
     {
