--- a/app/src/components/footer/Footer.astro
+++ b/app/src/components/footer/Footer.astro
@@ -146,7 +146,7 @@ const year = new Date().getFullYear();
     text-decoration: none;
 
     height: 40px;
-    border-radius: 20px;
+    border-radius: 12px;
     padding-inline: 8px;
     gap: 0;
 
@@ -167,7 +167,8 @@ const year = new Date().getFullYear();
       font-variation-settings 300ms var(--easing-standard),
       grid-template-columns 600ms var(--easing-emphasized),
       padding-inline 600ms var(--easing-emphasized),
-      gap 600ms var(--easing-emphasized);
+      gap 600ms var(--easing-emphasized),
+      border-radius 360ms cubic-bezier(0.42, 1.67, 0.21, 0.90);
 
     &::before {
       content: "";
@@ -176,17 +177,18 @@ const year = new Date().getFullYear();
     }
 
     &:hover {
-      gap: 16px;
-      padding-inline: 16px 24px;
-      grid-template-columns: 18px 1fr;
+      padding-inline: 16px;
+      grid-template-columns: 20px 1fr;
       gap: 8px;
 
-      background-color: color-mix(in srgb, transparent, var(--color-primary) 8%);
-      color: var(--color-primary);
+      background-color: color-mix(in srgb, var(--color-primary), var(--color-on-primary) 8%);
+      color: var(--color-on-primary);
     }
     &:active {
-      background-color: color-mix(in srgb, transparent, var(--color-primary) 10%);
+      background-color: color-mix(in srgb, var(--color-primary), var(--color-on-primary) 10%);
+      color: var(--color-on-primary);
       font-variation-settings: "GRAD" 150;
+      border-radius: 8px;
     }
 
     & .icon {
