--- a/app/src/pages/blog/index.astro
+++ b/app/src/pages/blog/index.astro
@@ -2,7 +2,6 @@
 import Page from "../../layouts/Page.astro";
 import { Header } from "../../components/header";
 import { Footer } from "../../components/footer";
-import { getCollection } from "astro:content";
 import { Image } from "astro:assets";
 
 import ImageIcon from "~icons/material-symbols-rounded/image:outlined&opticalSize=48";
@@ -10,10 +9,9 @@ import ImageIcon from "~icons/material-symbols-rounded/image:outlined&opticalSiz
 import dayjs from "dayjs";
 import utc from "dayjs/plugin/utc";
 import { getBlogCollection } from "../../schemas/blog";
-import type { ActionError } from "astro:actions";
-import type { JSX } from "astro/jsx-runtime";
 
 import { TAGS, type Tag } from "../../schemas/blog";
+import type { ImageMetadata } from "astro";
 
 dayjs.extend(utc);
 
@@ -45,8 +43,8 @@ const posts = (await getBlogCollection())
     <article>
       <ul class="posts">
         {
-          posts.map(({ id, slug, data: post }) => {
-            const postUrl = `/blog/${slug}/`;
+          posts.map(({ id, data: post }) => {
+            const postUrl = `/blog/${id}/`;
             const [author, ...authors] = post.authors
               .map(({ id, name, avatar }) => {
                 const avatarImage = avatar
@@ -93,7 +91,7 @@ const posts = (await getBlogCollection())
                                   : { ...value };
                                 return (
                                   <li class:list={["tag", tag.icon && "with-icon"]}>
-                                    {tag.icon && <tag.icon width={18} height={18} />}
+                                    {tag.icon && <tag.icon width={20} height={20} />}
                                     {tag.label}
                                   </li>
                                 );
@@ -264,7 +262,7 @@ const posts = (await getBlogCollection())
     display: flex;
     flex-direction: column;
     justify-content: center;
-    gap: 8px;
+    gap: 16px;
     padding: 24px 24px;
   }
 
@@ -385,19 +383,23 @@ const posts = (await getBlogCollection())
     flex-wrap: wrap;
     align-items: center;
     justify-content: flex-start;
-    gap: 8px;
+    column-gap: 18px;
+    row-gap: 16px;
   }
 
   .tag {
     display: flex;
     align-items: center;
     justify-content: center;
+
+    /* TODO: this cannot be changed to 4px because icons must first be padded */
     gap: 8px;
 
-    background-color: var(--color-secondary-container);
-    border-radius: 8px;
-    height: 32px;
-    padding-inline: 16px;
+    background-color: var(--color-surface-container);
+    border-radius: 12px;
+    min-height: 32px;
+    padding-block: 6px;
+    padding-inline: 12px;
 
     font-family: var(--text-label-large-family);
     font-size: var(--text-label-large-size);
@@ -406,10 +408,6 @@ const posts = (await getBlogCollection())
     letter-spacing: var(--text-label-large-letter-spacing);
     text-decoration: none;
     font-variation-settings: "GRAD" 0;
-    color: var(--color-on-secondary-container);
-
-    &.with-icon {
-      padding-inline-start: 8px;
-    }
+    color: var(--color-on-surface-variant);
   }
 </style>
